@@ -21,7 +21,6 @@ package edu.umd.cs.findbugs;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.GregorianCalendar;
 import java.util.HashSet;
 import java.util.Set;
@@ -189,15 +188,7 @@ public abstract class FindBugs {
      * are assumed to be files.
      */
     @StaticConstant
-    public static final Set<String> knownURLProtocolSet;
-    static {
-        Set<String> protocols = new HashSet<>();
-        protocols.add("file");
-        protocols.add("http");
-        protocols.add("https");
-        protocols.add("jar");
-        knownURLProtocolSet = Collections.unmodifiableSet(protocols);
-    }
+    public static final Set<String> knownURLProtocolSet = Set.of("file", "http", "https", "jar");
 
     /**
      * Set the FindBugs home directory.
@@ -254,7 +245,7 @@ public abstract class FindBugs {
      * @param factory
      *            the DetectorFactory
      * @param rankThreshold
-     *            TODO
+     *            the rank threshold
      * @return true if the DetectorFactory should be enabled, false otherwise
      */
     public static boolean isDetectorEnabled(IFindBugsEngine findBugs, DetectorFactory factory, int rankThreshold) {
@@ -400,6 +391,7 @@ public abstract class FindBugs {
         } catch (InterruptedException e) {
             assert false; // should not occur
             checkExitCodeFail(commandLine, e);
+            Thread.currentThread().interrupt();
             throw new RuntimeException(e);
         } catch (RuntimeException | IOException e) {
             checkExitCodeFail(commandLine, e);
@@ -454,7 +446,7 @@ public abstract class FindBugs {
      * Show the overall FindBugs command synopsis.
      */
     public static void showSynopsis() {
-        LOG.warning("Usage: findbugs [general options] -textui [command line options...] [jar/zip/class files, directories...]");
+        LOG.warning("Usage: spotbugs [general options] -textui [command line options...] [jar/zip/class files, directories...]");
     }
 
     /**
