@@ -22,8 +22,6 @@ package edu.umd.cs.findbugs.ba;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
@@ -33,7 +31,8 @@ import java.net.URL;
 import java.net.URLConnection;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
-import java.nio.file.Paths;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.LinkedList;
@@ -272,7 +271,7 @@ public class SourceFinder implements AutoCloseable {
         file.deleteOnExit();
         final BlockingSourceRepository r = new BlockingSourceRepository();
         Util.runInDameonThread(() -> {
-            try (InputStream in = open(url); OutputStream out = new FileOutputStream(file);) {
+            try (InputStream in = open(url); OutputStream out = Files.newOutputStream(file.toPath())) {
                 IO.copy(in, out);
                 r.setBase(new ZipSourceRepository(new ZipFile(file)));
             } catch (IOException e) {
@@ -359,7 +358,7 @@ public class SourceFinder implements AutoCloseable {
 
         public ZipSourceRepository(@WillCloseWhenClosed ZipFile zipFile) throws IOException {
             this.zipFile = zipFile;
-            this.zipFileSystem = FileSystems.newFileSystem(Paths.get(zipFile.getName()), (ClassLoader) null);
+            this.zipFileSystem = FileSystems.newFileSystem(Path.of(zipFile.getName()), (ClassLoader) null);
         }
 
         @Override
@@ -531,7 +530,7 @@ public class SourceFinder implements AutoCloseable {
         String sourceRepositories = repositoryList.stream()
                 .map(Object::toString)
                 .collect(Collectors.joining(", "));
-        throw new FileNotFoundException("Can't find source file " + fileName + " (source repositories="
+        throw new IOException("Can't find source file " + fileName + " (source repositories="
                 + sourceRepositories + ")");
     }
 
